# hmi

./: .gitignore  dev.sh  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
docs/: EXTENSION_GUIDE.md  HMI_ARCHITECTURE.md  README.md  SEMI_E95_UI_Guide.md  architecture.md  bugfix-plan.md  craftsmanship_build.md  dev-plan.md
docs/craftsmanship-usage/: README.md
docs/implementation/: 01-overview.md  02-backend-rust.md  03-ipc-and-platform.md  04-layout-and-view-lifecycle.md  05-state-stores.md  06-monitor-spectrum.md  07-files-log-viewer.md  08-error-retry-logging.md  09-theme-scale-i18n.md  10-testing-strategy.md  11-hmip-binary-protocol.md  12-craftsmanship-backend.md  README.md
docs/raspberry-pi-deploy/: Dockerfile  README.md  build.sh
src/: App.tsx  constants.ts  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/Log/: alarm_history.txt  motor_data_2024-12-17.csv  sensor_data_2024-12-17.csv  system_log.txt
src-tauri/Log/2024-12-16/: daily_log.txt  sensor_data.csv
src-tauri/capabilities/: default.json
src-tauri/proto/secs/rpc/v1/: secs_rpc.proto
src-tauri/src/: commands.rs  lib.rs  main.rs  secs_rpc.rs  sensor.rs  system.rs
src-tauri/src/comm/: actor.rs  mod.rs  proto.rs  serial.rs  tcp.rs
src-tauri/src/craftsmanship/: loader.rs  mod.rs  tests.rs  types.rs  validation.rs
src-tauri/src/craftsmanship/runtime/: dispatch.rs  engine.rs  manager.rs  mod.rs  tests.rs  types.rs
src/hmi/: viewLoaders.test.tsx  viewLoaders.tsx  viewRegistry.tsx
src/hooks/: index.ts  useAsync.ts  useCanvasScale.ts  useConfirm.ts  (+30 more)
tests/: Cargo.toml
tests-node/: design-system.test.mjs  files-split.test.mjs  loader.mjs  monitor-split.test.mjs
(+152 files in other folders)
