[package]
name = "hmi"
version = "0.1.0"
description = "Industrial HMI based on SEMI E95 specification"
authors = ["you"]
edition = "2021"

[lib]
name = "hmi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
tonic-prost-build = "0.14"

[dependencies]
tauri = { version = "2", features = ["test"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-serial = "5.4"
log = "0.4"
base64 = "0.22"
bytes = "1"
crc32fast = "1"
prost = "0.14"
tonic = { version = "0.14", features = ["transport"] }
tonic-prost = "0.14"
gpio-cdev = "0.6"

[dev-dependencies]
serialport = "4.7"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
